--- a/pg4.html
+++ b/pg4.html
@@ -2,6 +2,7 @@ CheckOut HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="pg4.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatSync - Weight Loss Pro</title>
