--- a/pg1.html
+++ b/pg1.html
@@ -14,6 +14,8 @@
     <!-- NAVBAR -->
     <header>
         <div class="container nav">
+             <img src="images/logo.jpeg"
+            alt = "EatSync Logo" class = "dm-logo">
             <div class="logo">EatSync</div>
             <nav>
                 <ul>
