--- a/pg1.html
+++ b/pg1.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="hero-img">
-                <img src="images/" alt="Meal Plan">
+                <img src="images/pic8.png" alt="Meal Plan">
             </div>
         </div>
     </section>
@@ -79,7 +79,7 @@
             <div class="cards">
                 <!-- CARD 1 -->
                 <div class="card">
-                    <img src="meal1.jpg" alt="">
+                    <img src="images/pic1 (1).png" alt="">
                     <div class="card-content">
                         <span class="label">Popular</span>
                         <h3>Weight Loss Pro</h3>
@@ -90,7 +90,7 @@
 
                 <!-- CARD 2 -->
                 <div class="card">
-                    <img src="meal2.jpg" alt="">
+                    <img src="images/pic2.png" alt="">
                     <div class="card-content">
                         <span class="label green">New</span>
                         <h3>Muscle Gain</h3>
@@ -101,7 +101,7 @@
 
                 <!-- CARD 3 -->
                 <div class="card">
-                    <img src="meal3.jpg" alt="">
+                    <img src="images/pic3.png" alt="">
                     <div class="card-content">
                         <h3>Balanced Living</h3>
                         <p>A nutritious plan with a mix of proteins, carbs, and veggies.</p>
