--- a/pg2.html
+++ b/pg2.html
@@ -72,7 +72,7 @@
                 Track your journey, achieve your goals, and transform your lifestyle with smart nutrition.
             </p>
 
-            <img src="food.jpg" alt="Meal Image" class="meal-img">
+            <img src="images/pic5.png" alt="Meal Image" class="meal-img">
 
             <div class="stats">
                 <div><strong>50K+</strong><br>Users</div>
