--- a/pg3.html
+++ b/pg3.html
@@ -1,4 +1,4 @@
-Prodcut Listing HTML
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,7 +68,7 @@ Prodcut Listing HTML
 
         <!-- Card 1 -->
         <div class="card">
-            <img src="img1.jpg" alt="">
+            <img src="images/pic1 (1).png" alt="">
             <h3>Weight Loss Pro</h3>
             <p class="desc">Balanced meals designed for sustainable weight loss.</p>
 
@@ -81,7 +81,7 @@ Prodcut Listing HTML
 
         <!-- Card 2 -->
         <div class="card">
-            <img src="img2.jpg" alt="">
+            <img src="images/pic2.png" alt="">
             <h3>Muscle Gain</h3>
             <p class="desc">High-protein meals to support muscle growth.</p>
 
@@ -94,7 +94,7 @@ Prodcut Listing HTML
 
         <!-- Card 3 -->
         <div class="card">
-            <img src="img3.jpg" alt="">
+            <img src="images/pic3.png" alt = "">
             <h3>Balanced Living</h3>
             <p class="desc">Nutritional meals for a healthy lifestyle.</p>
 
