--- a/pg4.html
+++ b/pg4.html
@@ -1,4 +1,4 @@
-CheckOut HTML
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,7 +37,7 @@ CheckOut HTML
     <div class="left-content">
 
         <!-- Hero Image -->
-        <img src="hero.jpg" alt="Meal Image" class="hero-img">
+        <img src="images/pic6.png" alt="Meal Image" class="hero-img">
 
         <!-- Plan Description -->
         <div class="plan-box">
