--- a/pg5.html
+++ b/pg5.html
@@ -1,8 +1,9 @@
-final checkout HTMl
+
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="pg5.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatSync - Shopping Cart</title>
@@ -15,7 +16,7 @@ final checkout HTMl
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo">
-            <img src="logo.png" alt="EatSync">
+         <img src="images/logo.jpeg" alt="EatSync" class="dm-logo">
         </div>
 
         <nav>
@@ -42,7 +43,7 @@ final checkout HTMl
             <h2>Shopping Cart</h2>
 
             <div class="cart-card">
-                <img src="meal.jpg" alt="Meal Image">
+                <img src="images/pic6.png" alt="Meal Image">
 
                 <div class="item-info">
                     <h3>Weight Loss Pro</h3>
