--- a/page10.html
+++ b/page10.html
@@ -54,7 +54,8 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
             <div class="rounded-2xl overflow-hidden shadow-lg">
                  <!-- Placeholder image as per screenshot -->
-                <img src="https://images.unsplash.com/photo-1577308856961-8e9ec50d0c6b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Chefs Team" class="w-full h-full object-cover">
+                  <p>all images are ai generated</p>
+                <img src="images/image1.png" alt="Chefs Team" class="w-full h-full object-cover">
             </div>
             <div>
                 <h2 class="text-lg font-semibold mb-4 text-gray-800">Our Mission</h2>
