--- a/page6.html
+++ b/page6.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatSync - Footer Layout</title>
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="page6.css">
 </head>
 <body>
 
@@ -18,7 +17,8 @@
 
             <!-- Left Section -->
             <div class="footer-left">
-                <img src="logo.png" alt="EatSync Logo" class="logo">
+                <p>all images are ai generated</p>
+                <img src="images/image2.png" alt="EatSync Logo" class="logo">
                 <p>Your Smart Meal Partner for a healthier lifestyle. Personalized meal planning that syncs with your fitness goals.</p>
 
                 <div class="social-icons">
