--- a/page7.html
+++ b/page7.html
@@ -14,7 +14,8 @@
         <div class="container">
             <!-- Logo -->
             <div class="logo">
-                <img src="eatsync-logo.png" alt="EatSync Logo">
+                <p>all images are ai generated</p>
+                <img src="images/image2.png" alt="EatSync Logo">
             </div>
 
             <!-- Navigation Menu -->
