--- a/pg1.html
+++ b/pg1.html
@@ -47,6 +47,7 @@
             </div>
 
             <div class="hero-img">
+                <p>all images are ai generated</p>
                 <img src="images/pic8.png" alt="Meal Plan">
             </div>
         </div>
