--- a/pg2.html
+++ b/pg2.html
@@ -71,7 +71,7 @@
                 Discover personalized meal plans that adapt to your progress.
                 Track your journey, achieve your goals, and transform your lifestyle with smart nutrition.
             </p>
-
+            <p>all images are ai generated</p>
             <img src="images/pic5.png" alt="Meal Image" class="meal-img">
 
             <div class="stats">
