--- a/pg4.html
+++ b/pg4.html
@@ -37,6 +37,7 @@
     <div class="left-content">
 
         <!-- Hero Image -->
+         <p>all images are ai generated</p>
         <img src="images/pic6.png" alt="Meal Image" class="hero-img">
 
         <!-- Plan Description -->
