--- a/pg5.html
+++ b/pg5.html
@@ -43,6 +43,7 @@
             <h2>Shopping Cart</h2>
 
             <div class="cart-card">
+                <p>all images are ai generated</p>
                 <img src="images/pic6.png" alt="Meal Image">
 
                 <div class="item-info">
